--- a/CodeX/requirements.txt
+++ b/CodeX/requirements.txt
@@ -1,64 +1,73 @@
+amqp==5.3.1
 asgiref==3.8.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==25.4.16
-beautifulsoup4==4.13.3
+billiard==4.2.1
+cachetools==5.5.2
+celery==5.5.3
 certifi==2025.1.31
 cffi==1.17.1
 channels==4.2.2
+channels_redis==4.2.1
 charset-normalizer==3.4.1
-cloudinary==1.44.1
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+cloudinary==1.43.0
+colorama==0.4.6
 constantly==23.10.4
+cron-descriptor==1.4.5
 cryptography==44.0.2
-daphne==4.2.1
+daphne==4.2.0
 Django==5.1.7
+django-celery-beat==2.8.1
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
+django-timezone-field==7.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
-h11==0.14.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+httplib2==0.22.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
-outcome==1.3.0.post0
+kombu==5.5.4
+msgpack==1.1.0
+oauthlib==3.2.2
+packaging==25.0
+pillow==11.2.1
+prompt_toolkit==3.0.51
 psycopg==3.2.5
 psycopg-binary==3.2.5
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+pycryptodome==3.23.0
 PyJWT==2.9.0
 pyOpenSSL==25.1.0
-PySocks==1.7.1
+pyparsing==3.2.3
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+redis==6.1.0
 requests==2.32.3
-selenium==4.29.0
+requests-oauthlib==2.0.0
+rsa==4.9.1
 service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
 sqlparse==0.5.3
-trio==0.29.0
-trio-websocket==0.12.2
+stripe==12.0.0
 Twisted==25.5.0
-txaio==25.6.1
-typing_extensions==4.12.2
-tzdata==2025.1
+txaio==23.1.1
+typing_extensions==4.13.1
+tzdata==2025.2
 urllib3==2.3.0
-websocket-client==1.8.0
-wsproto==1.2.0
+vine==5.1.0
+wcwidth==0.2.13
 zope.interface==7.2
-asgiref==3.8.1
-cffi==1.17.1
-cryptography==44.0.2
-Django==5.1.7
-django-cors-headers==4.7.0
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
-psycopg==3.2.5
-psycopg-binary==3.2.5
-pycparser==2.22
-PyJWT==2.9.0
-python-dotenv==1.0.1
-sqlparse==0.5.3
-tzdata==2025.1
+gunicorn
