--- a/CodeX/requirements.txt
+++ b/CodeX/requirements.txt
@@ -26,6 +26,7 @@ Django==5.1.7
 django-celery-beat==2.8.1
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
+django-redis==6.0.0
 django-timezone-field==7.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
